[S] Fix page height overflow

--- a/AquaNet/src/app.sass
+++ b/AquaNet/src/app.sass
@@ -46,9 +46,11 @@ h1
 
 main:not(.no-margin)
   max-width: 1280px
-  margin: 0 auto
   width: 100%
-  height: 100%
+  min-height: 100%
+
+  margin: 0 auto
+  padding-bottom: 100px
 
 
 button
